@@ -1109,6 +1109,7 @@ tune_mu_div (void)
     param.function2 = speed_mpn_mu_div_qr;
     param.min_size = 4;
     param.max_size = 5000;
+    param.step_factor = 0.02;
     one (&mu_div_qr_threshold, &param);
   }
   {
@@ -1116,8 +1117,9 @@ tune_mu_div (void)
     param.name = "MU_DIVAPPR_Q_THRESHOLD";
     param.function = speed_mpn_dcpi1_divappr_q;
     param.function2 = speed_mpn_mu_divappr_q;
-    param.min_size = 100;
+    param.min_size = 4;
     param.max_size = 5000;
+    param.step_factor = 0.02;
     one (&mu_divappr_q_threshold, &param);
   }
 }
@@ -1153,6 +1155,7 @@ tune_mu_bdiv (void)
     param.function2 = speed_mpn_mu_bdiv_qr;
     param.min_size = 4;
     param.max_size = 5000;
+    param.step_factor = 0.02;
     one (&mu_bdiv_qr_threshold, &param);
   }
   {
@@ -1162,6 +1165,7 @@ tune_mu_bdiv (void)
     param.function2 = speed_mpn_mu_bdiv_q;
     param.min_size = 4;
     param.max_size = 5000;
+    param.step_factor = 0.02;
     one (&mu_bdiv_q_threshold, &param);
   }
 }
